Added breadcrumb to contact page.
- Added breadcrumb to contact page.
- Made current page get selected in header links.
- Added .main-layout2.

--- a/part/header.html
+++ b/part/header.html
@@ -3,10 +3,10 @@
     <a href="index.html" title="Fixxo" class="logo"></a>
     
     <div class="flex-grow-1 text-align-center align-self-center">
-        <a href="" class="active">Home</a>
-        <a href="">Categories</a>
-        <a href="">Products</a>
-        <a href="contact.html">Contact</a>
+        <a href="index.html" class="main-link active">Home</a>
+        <a href="" class="main-link">Categories</a>
+        <a href="" class="main-link">Products</a>
+        <a href="contact.html" class="main-link">Contact</a>
     </div>
     
     <div class="align-self-center">
