Working on featured product section.
- Cleaned up css a bit.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,22 @@
     </div>
 
     <!--#endregion-->
-    
+    <!--#region Featured Product-->
+
+    <div class="main-layout2">
+        
+        <div class="button-product container">
+            <img class="sm-row" src="" title="" alt=""></img>
+            <p>Category</p>
+            <p>Modern Black Blouse</p>
+            <rating class="rating-2-stars"></rating>
+            <p>$35.00</p>
+        </div>
+
+    </div>
+
+    <!--#endregion-->
+
 </div>
 </body>
 </html>
