Done with button-product for now.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
             <p>Modern Black Blouse</p>
             <rating class="rating-2-stars"></rating>
             <p>$35.00</p>
+            <div class="hover-box">
+                <button class="button-fancy button-red">QUICK VIEW</button>
+                <div class="icon-buttons vertical">
+                    <button class="button-icon fa fa-heart"></button>
+                    <button class="button-icon fa fa-code-compare"></button>
+                    <button class="button-icon fa fa-bag-shopping"></button>
+                </div>
+            </div>
         </div>
 
     </div>
