Added two more sections.
- Added Pamela Reif's top picks / Let's be conscious section.
- Added Our Specialty section.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <body>
 <div class="main-layout">
 
+    <!--TODO: Responsive layout-->
+    <!--TODO: Check margins / padding-->
+
     <!--#region Top section-->
 
     <div class="top-section background-light-gray">
@@ -30,9 +33,9 @@
     <!--#endregion-->
     <!--#region Winter clearance / New Arrivals-->
     
-    <div class="horizontal section">
+    <div class="horizontal section height-560">
 
-        <div class="background-gray height-560 flex-grow-2 position-relative background-model5">
+        <div class="background-gray flex-grow-2 position-relative background-model5">
             <div class="margin-49 margin-bottom-100 align-bottom">
                 <h2>Winter Clearance<br/>Up to 70% Off!</h2>
                 <h6 class="width-50p">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem apriam eaque ipsa quae ab illo inventore.</h6>
@@ -70,6 +73,54 @@
             </div>
         </div>
 
+    </div>
+
+    <!--#endregion-->
+    <!--#region Pamela Reif's top picks / Let's be conscious-->
+
+    <div class="horizontal section height-400">
+
+        <div class="width-100p background-gray flex-grow-2 position-relative background-model3">
+            <div class="margin-49 pos-right pos-vertical-center align-center height-fit-content">
+                <h2 class="margin-bottom-34">Pamela Reif's<br/>Top Picks</h2>
+                <button class="button-black button-fancy">SHOP NOW</button>
+            </div>
+        </div>
+
+        <div class="width-100p margin-left-32 background-light-gray position-relative background-model4">
+            <div class="margin-49 align-bottom pos-vertical-center align-center height-fit-content">
+                <h2 class="margin-bottom-34">Let's Be<br/>Conscious</h2>
+                <button class="button-white button-fancy">SHOP NOW</button>
+            </div>
+        </div>
+
+    </div>
+
+    <!--#endregion-->
+    <!--#region Our Specialty-->
+
+    <div class="padding-64 background-light-gray container-fluid">
+        <h5 class="row bold">Our Specialty</h5>
+        <div class="row gap-35">
+            <button class="button-specialty flex-sm-column">
+                <div>
+                    <h6>Track your order</h6>
+                    <a class="underline">Get Started ></a>
+                </div>
+            </button>
+            <button class="button-specialty flex-sm-column">
+                <div>
+                    <h6>Make a Return</h6>
+                    <a class="underline">Get Started ></a>
+                </div>
+            </button>
+            <button class="button-specialty flex-sm-column">
+                <div>
+                    <h6>Request a Price Adjustment</h6>
+                    <a class="underline">Get Started ></a>
+                </div>
+            </button>
+        </div>
     </div>
 
     <!--#endregion-->
